FIX Adjusting styles to fix some minor issues:
- The form will now fit to whatever space it's given up to 900px
- Reducing the space below the last element in the in-line forms
- Fixing an issue where left and right margins disappeared when the browser window was too small
- Fixing an issue where TinyMCE was causing the form to have horizontal scroll on smaller screens

--- a/client/src/components/ElementEditor/InlineEditForm.scss
+++ b/client/src/components/ElementEditor/InlineEditForm.scss
@@ -1,10 +1,39 @@
 .element-editor-editform {
   margin-top: $spacer-xs;
-  @include make-row();
   cursor: auto;
+
+  // For some reason the form is not considered a "row" when above a certain media breakpoint
+  // We need this for the "stacked" form style
+  @include media-breakpoint-up(lg) {
+    @include make-row()
+  }
+
+  // Counteract the margin that is added to the bottom of each form group
+  margin-bottom: -1rem;
+
+  // Force tinymce to have proper box-sizing
+  .mce-tinymce {
+    box-sizing: border-box;
+  }
+
+  // The form div itself receives some width styling that we prefer to be handled by
+  // field holder styling as below
+  &__form {
+    width: 100%;
+  }
 
   .form-group {
     margin-left: 0;
     margin-right: 0;
+  }
+
+  // Specificity overrides for styles provided by admin.
+  // Designs mandate that we're going with a "stacked" style here which doesn't currently
+  // translate very well to higher width
+  & &__form {
+    & .form-group .form__field-holder {
+      flex: 1 0 100%;
+      max-width: 900px;
+    }
   }
 }
